--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
         padding-top: 100px;
     }
     span{
-        background-color: blue;
-        color:violet
+        background-color: rgb(255, 0, 64);
+        color:rgb(169, 209, 236);
+        padding: 10px;
+    }
+    h2{
+        color:white
     }
 </style>
 <body>
     <h1>Welcome to <span>Blacksmith.Dev</span> the most awesomest website you ever done see!!!11!</h1>
+    <h2>Joy is the best in the world :)</h2>
 </body>
 </html>
